fix: font alignment

--- a/src/element.scss
+++ b/src/element.scss
@@ -273,7 +273,7 @@ code {
 
                     .notes {
                         flex-shrink: 0;
-                        transform: translate(0, 2px);
+                        // transform: translate(0, 2px);
                     }
 
                     .assignments {
@@ -283,7 +283,7 @@ code {
                         font-size: 15px;
                         color: #666;
 
-                        transform: translate(0, 2px);
+                        // transform: translate(0, 2px);
                     }
                 }
             }
